--- a/fitur.html
+++ b/fitur.html
@@ -65,5 +65,55 @@
         >
       </nav>
     </header>
+
+    <main class="max-w-5xl mx-auto px-6 py-10">
+      <h2 class="text-2xl font-bold text-vibe">Fitur Utama</h2>
+      <p class="mt-2 text-sm text-slate-400">Ringkas, terfokus, actionable.</p>
+
+      <div class="mt-8 grid gap-6 sm:grid-cols-3">
+        <div class="p-5 rounded border border-slate-800 bg-slate-900">
+          <div class="text-neon font-semibold">1. Red Team Ops</div>
+          <p class="mt-2 text-sm text-slate-300">
+            Playbooks, safe toolchains, dan automasi serangan simulasi yang
+            repeatable.
+          </p>
+        </div>
+
+        <div class="p-5 rounded border border-slate-800 bg-slate-900">
+          <div class="text-neon font-semibold">2. App Hardening</div>
+          <p class="mt-2 text-sm text-slate-300">
+            Security pipeline: SAST, dependency checks, runtime hardening.
+          </p>
+        </div>
+
+        <div class="p-5 rounded border border-slate-800 bg-slate-900">
+          <div class="text-neon font-semibold">3. Incidence Response</div>
+          <p class="mt-2 text-sm text-slate-300">
+            Telemetry & safe-containment playbooks untuk kerusakan minimal.
+          </p>
+        </div>
+      </div>
+
+      <div class="mt-8">
+        <a
+          href="contact.html"
+          class="inline-block px-4 py-2 bg-neon text-black rounded font-semibold"
+          >Minta Demo</a
+        >
+      </div>
+    </main>
+
+    <footer
+      class="max-w-5xl mx-auto px-6 py-8 border-t border-slate-800 text-sm text-slate-500"
+    >
+      <div class="flex justify-between">
+        <div>&copy; <span id="year2"></span> png corp</div>
+        <div class="text-xs text-slate-400">Made for ops</div>
+      </div>
+    </footer>
+
+    <script>
+      document.getElementById("year2").textContent = new Date().getFullYear();
+    </script>
   </body>
 </html>
