--- a/fitur.html
+++ b/fitur.html
@@ -52,7 +52,7 @@
           >Home</a
         >
         <a
-          href="features.html"
+          href="fitur.html"
           class="px-3 py-1 rounded bg-vibe text-black font-semibold"
           >Fitur</a
         >
