--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
       </a>
 
       <nav class="space-x-4 text-sm">
-        <a href="index.html" class="px-3 py-1 rounded hover:bg-slate-800"
+        <a
+          href="index.html"
+          class="px-3 py-1 rounded bg-vibe text-black font-semibold"
           >Home</a
         >
-        <a href="features.html" class="px-3 py-1 rounded hover:bg-slate-800"
+        <a href="fitur.html" class="px-3 py-1 rounded hover:bg-slate-800"
           >Fitur</a
         >
         <a href="about.html" class="px-3 py-1 rounded hover:bg-slate-800"
           >Tentang</a
         >
-        <a
-          href="contact.html"
-          class="px-3 py-1 rounded bg-neon text-black font-semibold"
+        <a href="contact.html" class="px-3 py-1 rounded hover:bg-slate-800"
           >Kontak</a
         >
       </nav>
@@ -89,14 +89,13 @@
             png corp
           </h1>
           <p class="mt-4 text-lg text-slate-300">
-            Red-team focused engineering — kita bangun, kita retas (to secure).
-            Tools, automation, dan platform untuk penetration, ops, and incident
-            response.
+            "Pertahanan terbaik adalah menyerang" - Platform untuk penetration,
+            ops, and incident response.
           </p>
 
           <div class="mt-6 flex gap-3">
             <a
-              href="features.html"
+              href="fitur.html"
               class="px-5 py-2 border rounded text-sm border-slate-700 hover:border-vibe"
               >Lihat Fitur</a
             >
