--- a/about.html
+++ b/about.html
@@ -7,7 +7,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
-        theme: { extend: { colors: { neon: "#00ff7f", vibe: "#8A2BE2" } } },
+        theme: {
+          extend: {
+            colors: { neon: "#00ff7f", vibe: "#8A2BE2", stealth: "#0b0b0b" },
+          },
+        },
       };
     </script>
   </head>
@@ -47,7 +51,7 @@
         <a href="index.html" class="px-3 py-1 rounded hover:bg-slate-800"
           >Home</a
         >
-        <a href="features.html" class="px-3 py-1 rounded hover:bg-slate-800"
+        <a href="fitur.html" class="px-3 py-1 rounded hover:bg-slate-800"
           >Fitur</a
         >
         <a
