--- a/fitur.html
+++ b/fitur.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>png corp — Fitur</title>
+  <title>png corp — Fitur</title>
+  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="logopng.png" type="image/png" />
+  <meta name="theme-color" content="#0b0b0b" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
