--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>png corp — Kontak</title>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="logopng.png" type="image/png" />
+    <meta name="theme-color" content="#0b0b0b" />
     <meta
       name="description"
       content="Hubungi png corp untuk demo atau konsultasi"
