--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>png corp — Home</title>
+    <link rel="icon" href="logopng.png" type="image/svg+xml" />
+    <link rel="icon" href="logopng.png" type="image/png" />
+    <meta name="theme-color" content="#0b0b0b" />
     <meta
       name="description"
       content="png corp - offensive-minded tech, red-team & security ops"
@@ -61,7 +64,6 @@
             corp
           </text>
         </svg>
-        <span class="text-sm text-slate-300">png corp</span>
       </a>
 
       <nav class="space-x-4 text-sm">
